Thu Mar 10 10:09:35 2011  NARUSE, Yui  <naruse@ruby-lang.org>

	* lib/test/unit.rb (Test::Unit::Runner::Worker#read): fix for the case
	  when IO#read or IO#gets returns nil.

Thu Mar 10 07:12:03 2011  Ryan Davis  <ryand-ruby@zenspider.com>

	* lib/rubygems*: Import rubygems 1.6.2 (release candidate @ 2026fbb5)
	* test/rubygems: Ditto
	* test/runner.rb: Added test to load path to fix test requires.

Thu Mar 10 03:00:43 2011  Tanaka Akira  <akr@fsij.org>

	* ext/openssl/ossl_ssl.c: parenthesize macro arguments.

Wed Mar  9 23:51:26 2011  CHIKANAGA Tomoyuki  <nagachika00@gmail.com>

	* test/ruby/test_io_m17n.rb (test_io_new_enc): "sjis" is now an alias
	  of Windows-31J.

Wed Mar  9 23:06:13 2011  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* misc/ruby-mode.el (ruby-parse-partial): fix indent after aref.

Wed Mar  9 12:50:24 2011  Aaron Patterson <aaron@tenderlovemaking.com>

	* ext/psych/lib/psych/visitors/yaml_tree.rb: Rescue exceptions when
	  people implement the method method. Thanks Lin Jen-Shin.
	  [ruby-core:35255]

	* test/psych/visitors/test_yaml_tree.rb: test for implementation of
	  method method.

Wed Mar  9 11:53:31 2011  NARUSE, Yui  <naruse@ruby-lang.org>

	* enc/shift_jis.c: Change SJIS as an alias of Windows-31J.
	  [ruby-dev:43027] fixes #4280

	* enc/shift_jis.c: Add PCK as an alias of Windows-31J.

Wed Mar  9 00:45:29 2011  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* ext/extmk.rb: nmake substitutes all occurences in macro.

	* ext/extmk.rb: workaround for nmake.

Tue Mar  8 23:49:45 2011  KOSAKI Motohiro  <kosaki.motohiro@gmail.com>

	* process.c (proc_setgroups): cleanup.

Tue Mar  8 23:40:30 2011  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* test/misc/test_ruby_mode.rb: test for ruby-mode.el.

Tue Mar  8 23:27:38 2011  KOSAKI Motohiro  <kosaki.motohiro@gmail.com>

	* process.c (get_sc_ngroups_max): try to use NGROUPS_MAX at first if
	  _SC_NGROUP_MAX is not defined.

Tue Mar  8 23:10:16 2011  Nobuyoshi Nakada  <nobu@ruby-lang.org>
