@@ -1,3 +1,9 @@
+Thu Mar 10 10:52:01 2011  NAKAMURA Usaku  <usa@ruby-lang.org>
+
+	* test/ruby/test_require.rb: setting too long string to ENV causes
+	  Errno::EINVAL on Windows.  long path name errors may causes over
+	  about 1024 bytes, then limit it about 4000 bytes.
+
 Thu Mar 10 10:09:35 2011  NARUSE, Yui  <naruse@ruby-lang.org>
 
 	* lib/test/unit.rb (Test::Unit::Runner::Worker#read): fix for the case
